# Vuzhyk

./: .gitignore  CMakeLists.txt  FilePicker.vcxproj  README.md  Vuzhyk.sln  Vuzhyk.vcxproj  app.rc  build.ps1  colors.jsonc  generate_moc.bat  resources.qrc
cmake/: BundlePython.cmake
embedded-browser/: EmbeddedBrowserExtension.vcxproj
embedded-browser/src/: BrowserWindow.cpp  BrowserWindow.h  main.cpp
html/: test.html
icons/logo/: py.pdn
src/: AnimatedMenu.cpp  AnimatedMenu.h  CodeEditor.cpp  CodeEditor.h  ConsoleWidget.cpp  ConsoleWidget.h  HelpWidget.cpp  HelpWidget.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  SettingsWidget.h  TitleBar.cpp  TitleBar.h  WindowFrameOverlay.cpp  WindowFrameOverlay.h  filepicker.cpp  main.cpp
src/pyrobeditor/: PyrobEditorWidget.cpp  PyrobEditorWidget.h  grideditor.cpp  grideditor.h  projectmodel.cpp  projectmodel.h
src/sea/: SnakeGame.cpp  SnakeGame.h
